--- a/html/identifier l'entitée.html
+++ b/html/identifier l'entitée.html
@@ -117,7 +117,7 @@
 <br><br>
 <ul>
 	<div id="Tableau.f:"><h2>Tableau:</h2></div>
-	<img src="../ima/tableau2.png" id="">
+	<img src="../ima/tableau2.PNG" id="">
 </ul>
 
 <br><br><br>
