--- a/html/identifier l'entitée.html
+++ b/html/identifier l'entitée.html
@@ -51,7 +51,7 @@
 	<li><t>à savoir:</t> <c> On peut voire difficilement ou ne pas les voires si la lumiére est allumer. Les Orbs ne sont visible que par les caméra en vision nocturne.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html/#Camera:">camera</a>
+	<a href="equipement.html #Camera:">camera</a>
 </ul>
 
 <br><br>
