--- a/html/identifier l'entitée.html
+++ b/html/identifier l'entitée.html
@@ -63,7 +63,7 @@
 	<li><t>à savoir:</t> <c> Certaines entitées ne réponde que au personne seul donc regarder bien le tableau des objectifs avant de partir. Certaines entitées ne répondent pas quand il y a de la lumière.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html #Spirit Box:">Spirit Box</a>
+	<a href="equipement.html">Spirit Box</a>
 </ul>
 
 <br><br>
