--- a/html/identifier l'entitée.html
+++ b/html/identifier l'entitée.html
@@ -51,7 +51,7 @@
 	<li><t>à savoir:</t> <c> On peut voire difficilement ou ne pas les voires si la lumiére est allumer. Les Orbs ne sont visible que par les caméra en vision nocturne.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html">camera</a>
+	<a href="equipement.html#Camera:">camera</a>
 </ul>
 
 <br><br>
@@ -63,7 +63,7 @@
 	<li><t>à savoir:</t> <c> Certaines entitées ne réponde que au personne seul donc regarder bien le tableau des objectifs avant de partir. Certaines entitées ne répondent pas quand il y a de la lumière.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html">Spirit Box</a>
+	<a href="equipement.html#Spirit Box:">Spirit Box</a>
 </ul>
 
 <br><br>
@@ -75,7 +75,7 @@
 	<li><t>à savoir:</t> <c> On peut trouver les empreintes sur <m>les fenettres, portes, interrupteur.</m> Vous pouvez voir les empreintes digitales en utilisant la lumière UV ou le bâton lumineux. <r> Attention</r>, Les empreintes de pas marquées à l'aide de sel ou les empreintes de pied avec l'UV ne sont pas considérées comme des preuves d'empreintes digitales elle serve juste à indiquer ou est l'entitée.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html #Lampe UV/Bâton UV:">Lampe UV/Bâton UV:</a>
+	<a href="equipement.html#Lampe UV/Bâton UV:">Lampe UV/Bâton UV:</a>
 </ul>
 
 <br><br>
@@ -87,7 +87,7 @@
 	<li><t>à savoir:</t> <c> Le niveau EMF 5 est considéré valider que quand les 5 diodes sont allumé si c'est endessou ce n'est pas ou pas encore un EMF niveau 5.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html #Lecteur EMF:">Lecteur EMF:</a>
+	<a href="equipement.html#Lecteur EMF:">Lecteur EMF:</a>
 </ul>
 
 <br><br>
@@ -99,7 +99,7 @@
 	<li><t>à savoir:</t> <c> La température peut être lue à l'aide d'un thermomètre / ou en observant votre respiration qui fera de la buée.<r> Attention</r>, On peut considéré d'être en têmpérature glaciale que si on est <u>inférieure à 0 degré Celsius ou inférieure à 32 Fahrenheit.</u></c>
 	</li>
 	<br><br>
-	<a href="equipement.html #Thermomètre:">Thermomètre:</a>
+	<a href="equipement.html#Thermomètre:">Thermomètre:</a>
 </ul>
 	
 <br><br>
@@ -111,7 +111,7 @@
 	<li><t>à savoir:</t> <c> Eteindre la lumière augmente les chances d'écriture Fantomatique et mettre un deuxiéme livre aussi.</c>
 	</li>
 	<br><br>
-	<a href="equipement.html #Livre d'écriture:">Livre d'écriture:</a>
+	<a href="equipement.html#Livre d'écriture:">Livre d'écriture:</a>
 </ul>
 
 <br><br>
