--- a/html/map.html
+++ b/html/map.html
@@ -99,8 +99,8 @@
 </ul>
 
 <ul>
-	<div color=""id="Azile:"><h2>Azile:</h2></div>
-	<li><t>Azile:</t><c> Asylum est la première grande carte à être ajoutée lors d'un accès anticipé. Son architecture labyrinthique, associée à ses couloirs et couloirs sans fin, en fait une aventure intimidante, et même l'enquêteur paranormal le plus expérimenté peut se perdre.</c></li><br>
+	<div color=""id="Azile:"><h2>Asile:</h2></div>
+	<li><t>Asile:</t><c> Asylum est la première grande carte à être ajoutée lors d'un accès anticipé. Son architecture labyrinthique, associée à ses couloirs et couloirs sans fin, en fait une aventure intimidante, et même l'enquêteur paranormal le plus expérimenté peut se perdre.</c></li><br>
 	<li><t>Grande map:</t> <c> 1 porte de sortie, Deux étages, 78 salle l'étage 1, 43 salle au sous-sol, 15 caméras, 17 robinets </c>
 	</li><br>
 	<li><t>à savoir:</t> <c> une lampe de poche puissante et des bougies placées aux intersections clés peuvent ne pas être suffisantes pour empêcher une perte de santé mentale dans ces salles sombres, alors assurez-vous d'emporter beaucoup de pilules de santé mentale avant de commencer une enquête.</c>
