--- a/html/map.html
+++ b/html/map.html
@@ -89,7 +89,7 @@
 </ul>
 
 <ul>
-	<div color=""id="Ecole:"><h2>Ecole:</h2></div>
+	<div color=""id="Ecole:"><h2>Ecole:</h2></div><div id="textemouvent"><marquee>NOUVEAU</marquee></div>
 	<li><t>Ecole:</t><c> De longs couloirs décrépis, des salles de classe inquiétantes, des salles de bains grotesques et divers espaces de bureaux vacants remplissent l'endroit d'une atmosphère inquiétante. Sa forme carrée et sa symétrie générale peuvent rendre la navigation intuitive, et selon le fantôme, il peut être plus facile de courir pendant une chasse que de se cacher.</c></li><br>
 	<li><t>Moyen map:</t> <c> 5 porte de sortie, Deux étages, 8 salles de bain avec une rangée de lavabos,34 salle l'étage 1, 33 salle l'étage 2, 15 caméras </c>
 	</li><br>
