--- a/html/map.html
+++ b/html/map.html
@@ -89,7 +89,7 @@
 </ul>
 
 <ul>
-	<div color=""id="Ecole:"><h2>Ecole:</h2></div><div id="textemouvent"><marquee>NOUVEAU</marquee></div>
+	<div color=""id="Ecole:"><h2>Ecole:</h2></div>
 	<li><t>Ecole:</t><c> De longs couloirs décrépis, des salles de classe inquiétantes, des salles de bains grotesques et divers espaces de bureaux vacants remplissent l'endroit d'une atmosphère inquiétante. Sa forme carrée et sa symétrie générale peuvent rendre la navigation intuitive, et selon le fantôme, il peut être plus facile de courir pendant une chasse que de se cacher.</c></li><br>
 	<li><t>Moyen map:</t> <c> 5 porte de sortie, Deux étages, 8 salles de bain avec une rangée de lavabos,34 salle l'étage 1, 33 salle l'étage 2, 15 caméras </c>
 	</li><br>
@@ -100,7 +100,7 @@
 </ul>
 
 <ul>
-	<div color=""id="Prison:"><h2>Prison:</h2></div>
+	<div color=""id="Prison:"><h2>Prison:</h2></div><div id="textemouvent"><marquee>NOUVEAU</marquee></div>
 	<li><t>Prison:</t><c> Prison récemment fermé en raison d'un décès inexpliquer. Nous avons reçu il y a peut de temps des informations sur une possible hantise à cet endroit. Vous serez donc envoyé pour rassembler autant de preuve que possible afin qu'une équipe de suppression de fantôme puisse s'en débarrasser. </c></li><br>
 	<li><t>Moyen map:</t> <c> 3 porte de sortie, Deux étages, 19 salle l'étage 1, 12 salle l'étage 2, 16 robinets, 6 caméras au première étage et 5 au deuxième </c>
 	</li><br>
