--- a/html/accueil.html
+++ b/html/accueil.html
@@ -16,6 +16,7 @@
 	<a href="equipement.html">Equipement</a>
 	<a href="identifier l'entitée.html">Identifier l'entitée</a>
 	<a href="map.html">Map</a>
+	<a href="chasse.html">Chasse</a>
 	<br>
 	<audio src="../ima/re7.mp3" id="audio" controls></audio>
 	</div>
