--- a/html/equipement.html
+++ b/html/equipement.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><b>PHASMOPHOBIA</b></a>
+	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><m><b>PHASMOPHOBIA</b></m></a>
 	<br><br><br><br>
 	<div class="Accueil1">
 	<a href="accueil.html">Accueil</a>
@@ -15,6 +15,7 @@
 	<a href="equipement.html">Equipement</a>
 	<a href="identifier l'entitée.html">Identifier l'entitée</a>
 	<a href="map.html">Map</a>
+	<a href="chasse.html">Chasse</a>
 	</div>
 	</div> <!--haut de page du css-->
 
@@ -34,25 +35,25 @@
 
 <table class="table" align="center">
 
-<td><th><a href="#Livre d'écriture:">Livre d'écriture</a> </th></td>
-<td><th><a href="#Lecteur EMF:">Lecteur EMF</a></th></td>    
-<td><th><a href="#Lampe:">Lampe</a></th></td>    
-<td><th><a href="#Spirit Box:">Spirit Box</a></th></td>      
-<td><th><a href="#Lampe UV/Bâton UV:">Lampe UV/Bâton UV</a></th></td>        
-<td><th><a href="#Bâton d'encens:">Bâton d'encens</a></th></td>
+<th><a href="#Livre d'écriture:">Livre d'écriture</a> </th></td>
+<th><a href="#Lecteur EMF:">Lecteur EMF</a></th></td>    
+<th><a href="#Lampe:">Lampe</a></th></td>    
+<th><a href="#Spirit Box:">Spirit Box</a></th></td>      
+<th><a href="#Lampe UV/Bâton UV:">Lampe UV/Bâton UV</a></th></td>        
+<th><a href="#Bâton d'encens:">Bâton d'encens</a></th></td>
 
 </table>
 
 <table class="table" align="center">  
 
-<td><th><a href="#Bougie:">Bougie</a></th></td>
-<td><th><a href="#Briquet:">Briquet</a></th></td>
-<td><th><a href="#Thermomètre:">Thermomètre</a></th></td>
-<td><th><a href="#Crucifix:">Crucifix</a></th></td>  
-<td><th><a href="#Sel:">Sel</a></th></td>
-<td><th><a href="#Appareil photo:">Appareil photo</a></th></td>
-<td><th><a href="#Camera:">Camera</a></th></td>
-<td><th><a href="#Table Ouija:">Table Ouija</a></th></td>
+<th><a href="#Bougie:">Bougie</a></th></td>
+<th><a href="#Briquet:">Briquet</a></th></td>
+<th><a href="#Thermomètre:">Thermomètre</a></th></td>
+<th><a href="#Crucifix:">Crucifix</a></th></td>  
+<th><a href="#Sel:">Sel</a></th></td>
+<th><a href="#Appareil photo:">Appareil photo</a></th></td>
+<th><a href="#Camera:">Camera</a></th></td>
+<th><a href="#Table Ouija:">Table Ouija</a></th></td>
 
 </table>
 
@@ -148,7 +149,7 @@
 <div id="Appareil photo:"><h2>Appareil photo:</h2></div>
 <ul>
 <li><t>à savoir:</t><c>Utiliser pour gagner plus d'argent en fin de parti, il peut sependant faire disparaître temporairement un phantom mais n'arrêtera pas la chasse.</c></li><br>
-<li><t>utilisation:</t><c>Utiliser pour gagner de l'argent en prenant en photo:<m> les entitées/  l'eau sale/ écriture sur le livre/ planche Ouija</m>(si l'entitées la fait bouger)<m>/  pouper voodoo/  Os</m>(noublier pas de le ramasser)<m>/ objet qui bouge ou changer de place/  emprinte dans le sel</m>(les emprintes de pied avec l'UV ne compte pas).</c></li>
+<li><t>utilisation:</t><c>Utiliser pour gagner de l'argent en prenant en photo:<b id="gras"> les entitées/  l'eau sale/ écriture sur le livre/ planche Ouija</b>(si l'entitées la fait bouger)<b id="gras">/  pouper voodoo/  Os</b>(noublier pas de le ramasser)<b id="gras">/ objet qui bouge ou changer de place/  emprinte dans le sel</b>(les emprintes de pied avec l'UV ne compte pas).</c></li>
 	
 </ul>
 
@@ -157,7 +158,7 @@
 <div id="Camera:"><h2>Camera:</h2></div>
 <ul>
 	<li><t>à savoir:</t><c> Dans la pièce de l'entitée vous pourez petaitre voir des phénomène paranormal, surveiller ou gider vos amis et voire l'entitée quand elle apparaît ou quand elle est en chasse.</c></li><br>
-	<li><t>utilisation:</t><c> L'utilisation principale de la Camera est pour voir des <m>Orbs Fantomatiques</m> pour d'éterminer l'entitées et me marquer dans le journal.</c></li>
+	<li><t>utilisation:</t><c> L'utilisation principale de la Camera est pour voir des <b id="gras">Orbs Fantomatiques</b> pour d'éterminer l'entitées et me marquer dans le journal.</c></li>
 
 </ul>
 
