--- a/html/identifier l'entitée.html
+++ b/html/identifier l'entitée.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><b>PHASMOPHOBIA</b></a>
+	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><m><b>PHASMOPHOBIA</b></m></a>
 		<br><br><br><br>
 		<div class="Accueil1">
 			<a href="accueil.html">Accueil</a>
@@ -15,6 +15,7 @@
 			<a href="equipement.html">Equipement</a>
 			<a href="identifier l'entitée.html">Identifier l'entitée</a>
 			<a href="map.html">Map</a>
+			<a href="chasse.html">Chasse</a>
 		</div>
 	</div> <!--haut de page du css-->
 
@@ -33,13 +34,13 @@
 	<br><br>
 <table class="table" align="center">
 
-<td><th><a href="#Orb Fantomatique:">Orb Fantomatique</a> </th></td>
-<td><th><a href="#Spirit Box:">Spirit Box</a></th></td>    
-<td><th><a href="#Emprinte:">Emprinte</a></th></td>    
-<td><th><a href="#EMF niveaux 5:">EMF niveaux 5</a></th></td>      
-<td><th><a href="#Température glaciale:">Température glaciale</a></th></td>        
-<td><th><a href="#Ecriture Fantomatique:">Ecriture Fantomatique</a></th></td>
-<td><th><a href="#Tableau.f:">Tableau.f</a></th></td>
+<th><a href="#Orb Fantomatique:">Orb Fantomatique</a> </th></td>
+<th><a href="#Spirit Box:">Spirit Box</a></th></td>    
+<th><a href="#Emprinte:">Emprinte</a></th></td>    
+<th><a href="#EMF niveaux 5:">EMF niveaux 5</a></th></td>      
+<th><a href="#Température glaciale:">Température glaciale</a></th></td>        
+<th><a href="#Ecriture Fantomatique:">Ecriture Fantomatique</a></th></td>
+<th><a href="#Tableau.f:">Tableau.f</a></th></td>
 </table>
 
 <br><br><br>
@@ -72,7 +73,7 @@
 
 	<li><t>preuve:</t><c> Les empreintes digitales sont un type de preuves laissées par certaines entitées lorsqu'ils interagissent avec l'environnement du lieu.</c>
 	</li><br>
-	<li><t>à savoir:</t> <c> On peut trouver les empreintes sur <m>les fenettres, portes, interrupteur.</m> Vous pouvez voir les empreintes digitales en utilisant la lumière UV ou le bâton lumineux. <r> Attention</r>, Les empreintes de pas marquées à l'aide de sel ou les empreintes de pied avec l'UV ne sont pas considérées comme des preuves d'empreintes digitales elle serve juste à indiquer ou est l'entitée.</c>
+	<li><t>à savoir:</t> <c> On peut trouver les empreintes sur <b id="gras">les fenettres, portes, interrupteur.</b> Vous pouvez voir les empreintes digitales en utilisant la lumière UV ou le bâton lumineux. <r> Attention</r>, Les empreintes de pas marquées à l'aide de sel ou les empreintes de pied avec l'UV ne sont pas considérées comme des preuves d'empreintes digitales elle serve juste à indiquer ou est l'entitée.</c>
 	</li>
 	<br><br>
 	<a href="equipement.html#Lampe UV/Bâton UV:">Lampe UV/Bâton UV:</a>
