--- a/html/map.html
+++ b/html/map.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	
-	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><b>PHASMOPHOBIA</b></a>
+	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><m><b>PHASMOPHOBIA</b></m></a>
 	<br><br><br><br>
 	<div class="Accueil1">
 	<a href="accueil.html">Accueil</a>
@@ -16,6 +16,7 @@
 	<a href="equipement.html">Equipement</a>
 	<a href="identifier l'entitée.html">Identifier l'entitée</a>
 	<a href="map.html">Map</a>
+	<a href="chasse.html">Chasse</a>
 	<br>
 	
 	</div>
@@ -39,11 +40,11 @@
 <br><br>
 <table class="table" align="center">
 
-<td><th><a href="#Ecole:">Ecole</a> </th></td>
-<td><th><a href="#Prison:">Prison</a> </th></td>
-<td><th><a href="#Azile:">Azile</a></th></td>    
-<td><th><a href="#Ferme:">Ferme</a></th></td>    
-<td><th><a href="#Maison:">Maison</a></th></td>      
+<th><a href="#Ecole:">Ecole</a> </th></td>
+<th><a href="#Prison:">Prison</a> </th></td>
+<th><a href="#Azile:">Azile</a></th></td>    
+<th><a href="#Ferme:">Ferme</a></th></td>    
+<th><a href="#Maison:">Maison</a></th></td>      
 
 
 </table>
