--- a/html/site création.html
+++ b/html/site création.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><b>PHASMOPHOBIA</b></a>
+	<div id="header"><a id="neo" href="https://www.youtube.com/channel/UCO20PIhnkVa7qGDbh8LToQQ"><img src="../ima/umbrella.png" id="umbrella"></a><h1>NeoUmbrella91</h1><a id="grand-titre" href="accueil.html"><m><b>PHASMOPHOBIA</b></m></m></a>
 	<br><br><br><br>
 	<div class="Accueil1">
 	<a href="accueil.html">Accueil</a>
@@ -15,6 +15,7 @@
 	<a href="equipement.html">Equipement</a>
 	<a href="identifier l'entitée.html">Identifier l'entitée</a>
 	<a href="map.html">Map</a>
+	<a href="chasse.html">Chasse</a>
 	</div>
 	</div> <!--haut de page du css-->
 
